# diplom

./: .gitignore  Makefile  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/disc_server/: settings.py  urls.py
backend/university/: apps.py  backends.py  models.py  serializers.py  signals.py  views.py
backend/university/migrations/: 0001_initial.py  0002_alter_solutions_lab.py  0002_remove_groups_group_id_alter_groups_group_number_and_more.py  0003_remove_solutions_attempts_left_and_more.py  0003_remove_steps_module_id_steps_module_and_more.py  0004_alter_steps_module.py  0004_studentstepresult.py  0005_alter_solutions_student_alter_steps_lab_number.py  0005_alter_studentstepresult_unique_together.py  0005_remove_studentprofile_id_remove_teacherprofile_id_and_more.py  0006_alter_steps_step_file.py  0007_remove_studentprofile_email_and_more.py  0008_rename_attemts_steps_attempts.py  0009_alter_steps_attempts.py  0010_alter_studentstepattempt_step_and_more.py  0011_merge_20250515_2211.py
front/: package-lock.json  package.json
front/src/: App.jsx  api.js  constants.js  proxy-server.js
front/src/Rlcp/: BronKerboschRLCP.jsx  RLCPClient.jsx
front/src/course/: CourseCreation.css  CourseCreation.jsx  CourseEdit.css  (+10 more)
src/: App.css  App.jsx  main.jsx
src/course/: CourseCreation.jsx  CourseEdit.css  CourseEdit.jsx  CourseList.jsx  CoursePage.jsx
src/header/: Header.jsx
src/students/: AddAttemptsPage.jsx  AddStudentsPage.jsx  RemoveStudentsPage.jsx  Student.jsx  StudentList.jsx  StudentResultsPage.jsx  StudentStyle.css
(+44 files in other folders)
